# mevy

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml  pages.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/syntax/: Cargo.toml
crates/core/syntax/src/: lib.rs
crates/ecs/: Cargo.toml  README.md
crates/ecs/src/: lib.rs
crates/ecs/syntax/: Cargo.toml
crates/ecs/syntax/src/: lib.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: lib.rs
crates/ui/syntax/: Cargo.toml
crates/ui/syntax/src/: lib.rs
docs/: book.toml  flake.nix
docs/src/: SUMMARY.md  api-entity-selectors.md  api-grid-tracks.md  api-reference.md  api-ui-fields.md  changelog.md  faq.md  guides-building-a-ui.md  guides-custom-fields.md  guides-entity-queries.md  guides-index.md  guides-version-compat.md  installation.md  introduction.md  macros-code.md  macros-entity.md  macros-experimental.md  macros-overview.md  macros-ui.md  migration.md  quick-start.md
examples/: core_code.rs  ecs_picking.rs  ecs_simple_spawn.rs  entity_macro.rs  ui_bundle.rs
src/: lib.rs
tests/: README.md
tests/shared/: Cargo.toml
tests/shared/src/: lib.rs
tests/test_018/: Cargo.toml
tests/test_018/src/: lib.rs
tests/test_019/: Cargo.toml
tests/test_019/src/: lib.rs
