[package]
name = "mevy"
version = "0.1.1"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A growing set of macros, which add witchcraft into bevy!"
repository = "https://github.com/dekirisu/mevy/"
keywords = ["macro","bevy"]


[dependencies]
mevy_core.workspace = true
mevy_ui.workspace = true
mevy_ecs.workspace = true
# Optionals
mevy_ui.optional = true


[features]
default = ["ui"]
ui = ["dep:mevy_ui"]


[workspace.dependencies.mevy_core]
path = "crates/core"
version = "0.1.0"

[workspace.dependencies.mevy_core_syntax]
path = "crates/core/syntax"
version = "0.2.0"

[workspace.dependencies.mevy_ui]
path = "crates/ui"
version = "0.1.3"

[workspace.dependencies.mevy_ui_syntax]
path = "crates/ui/syntax"
version = "0.2.1"

[workspace.dependencies.mevy_ecs]
path = "crates/ecs"
version = "0.1.0"

[workspace.dependencies.mevy_ecs_syntax]
path = "crates/ecs/syntax"
version = "0.1.0"


[workspace.dependencies]
deki = "0.2.5"

[workspace]
members = [
    "crates/*",
    "crates/*/syntax",
]


[dev-dependencies.bevy]
version = "0.15"
default-features = false
features = [
    "bevy_window",
    "bevy_winit",
    "bevy_ui",
    "x11"
]
