[package]
name = "mevy_ecs"
version = "0.1.0"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "bevy_ecs macros, simplifying child spawning and picking!"
repository = "https://github.com/dekirisu/mevy/"
keywords = ["macro","bevy","bevy_ecs"]

[lib]
proc-macro = true

[dependencies]
mevy_ecs_syntax.workspace = true

[dependencies.deki]
workspace = true
features = ["proc"]
