[package]
name = "mevy_ui"
version = "0.2.2"
edition = "2024"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "bevy_ui macro, that adds a CSS-like syntax!"
repository = "https://github.com/dekirisu/mevy/"
keywords = ["macro","bevy","bevy_ui"]

[lib]
proc-macro = true

[dependencies]
mevy_ui_syntax.workspace = true

[dependencies.deki]
workspace = true
features = ["proc"]

[features]
default = []
"0.15" = ["mevy_ui_syntax/0.15"]
"0.16-rc" = ["mevy_ui_syntax/0.16-rc"]
"0.16" = ["mevy_ui_syntax/0.16"]
