[package]
name = "test_018"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_window",
    "bevy_winit",
    "bevy_ui",
    "bevy_picking",
    "x11",
] }
mevy = { path = "../../", features = ["0.18", "ui", "experimental"] }
