[package]
name = "mevy_ecs_syntax"
version = "0.1.9"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "token handling for mevy_ecs!"
repository = "https://github.com/dekirisu/mevy/"
keywords = ["proc","bevy"]

[dependencies]
mevy_core_syntax.workspace = true

[dependencies.deki]
workspace = true
features = ["proc"]

