[package]
name = "mevy_ecs_syntax"
version = "0.2.4"
edition = "2024"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "token handling for mevy_ecs!"
repository = "https://github.com/dekirisu/mevy/"
keywords = ["proc","bevy"]

[dependencies]
mevy_core_syntax.workspace = true

[dependencies.deki]
workspace = true
features = ["proc"]

[features]
default = []
"0.15" = []
"0.16" = []
"0.16-rc" = ["0.16"]
"0.17" = []
