[package]
name = "mevy_ui_syntax"
version = "0.2.2"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "token handling for mevy_ui!"
repository = "https://github.com/dekirisu/mevy/"
keywords = ["proc","bevy"]

[dependencies]
mevy_core_syntax.workspace = true

[dependencies.deki]
workspace = true
features = ["proc"]
