[package]
name = "mevy_ui_syntax"
version = "0.4.1"
edition = "2024"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "token handling for mevy_ui!"
repository = "https://github.com/dekirisu/mevy/"
keywords = ["proc","bevy"]

[dependencies]
mevy_core_syntax.workspace = true

[dependencies.deki]
workspace = true
features = ["proc"]

[features]
default = []
"0.15" = []
"0.16" = []
"0.16-rc" = ["0.16"]
